infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lcfms
  labels:
    name: lcfms
